[gd_scene load_steps=30 format=3 uid="uid://3l6v51u5iis2"]

[ext_resource type="Script" path="res://scripts/skeleton_boss_minion.gd" id="1_gq8q6"]
[ext_resource type="Texture2D" uid="uid://bidcpltfvc3tn" path="res://assets/skeleton_boss/summonAppear.png" id="2_fep8d"]
[ext_resource type="Texture2D" uid="uid://bjyjsy4j0l4b5" path="res://assets/skeleton_boss/summonIdle.png" id="3_5unji"]
[ext_resource type="Texture2D" uid="uid://dkcd1kebeapjj" path="res://assets/skeleton_boss/summonDeath.png" id="3_n53yf"]
[ext_resource type="Texture2D" uid="uid://julbulhtyo4p" path="res://assets/lightning/Lightning_1_512-sheet.png" id="5_ebw1k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mx0y2"]
atlas = ExtResource("2_fep8d")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7st2"]
atlas = ExtResource("2_fep8d")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_lom6d"]
atlas = ExtResource("2_fep8d")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_01tpy"]
atlas = ExtResource("2_fep8d")
region = Rect2(0, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_4peyl"]
atlas = ExtResource("2_fep8d")
region = Rect2(50, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_0btsl"]
atlas = ExtResource("2_fep8d")
region = Rect2(100, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jgvk"]
atlas = ExtResource("3_n53yf")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_hak6l"]
atlas = ExtResource("3_n53yf")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_rs2hn"]
atlas = ExtResource("3_n53yf")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_3olar"]
atlas = ExtResource("3_n53yf")
region = Rect2(0, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0jht"]
atlas = ExtResource("3_n53yf")
region = Rect2(50, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyt5m"]
atlas = ExtResource("3_n53yf")
region = Rect2(100, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_nixky"]
atlas = ExtResource("3_5unji")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcgte"]
atlas = ExtResource("3_5unji")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4ehk"]
atlas = ExtResource("3_5unji")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jye6"]
atlas = ExtResource("3_5unji")
region = Rect2(150, 0, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_3mm5b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx0y2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7st2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lom6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01tpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4peyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0btsl")
}],
"loop": false,
"name": &"appear",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jgvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hak6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rs2hn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3olar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0jht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyt5m")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nixky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcgte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4ehk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jye6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cphs6"]
radius = 5.0
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_233fb"]

[sub_resource type="GDScript" id="GDScript_j7q72"]
script/source = "extends Hitbox
"

[sub_resource type="CircleShape2D" id="CircleShape2D_lqhho"]
radius = 11.0

[sub_resource type="Animation" id="Animation_ejnoc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1vrml"]
resource_name = "default"
step = 0.111111
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.111111, 0.222222, 0.333333, 0.444444, 0.555556, 0.666667, 0.777778, 0.888889),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_02iuy"]
_data = {
"RESET": SubResource("Animation_ejnoc"),
"default": SubResource("Animation_1vrml")
}

[node name="skeleton_boss_minion" type="CharacterBody2D"]
process_mode = 1
z_index = 2
collision_layer = 16
collision_mask = 2
motion_mode = 1
platform_on_leave = 2
script = ExtResource("1_gq8q6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3mm5b")
animation = &"death"
autoplay = "appear"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 3)
shape = SubResource("CapsuleShape2D_cphs6")

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(-1, 3)
shape = SubResource("CircleShape2D_233fb")

[node name="Hitbox" type="Area2D" parent="." node_paths=PackedStringArray("hitbox_owner")]
visible = false
collision_layer = 8
collision_mask = 0
script = SubResource("GDScript_j7q72")
damage_power = 10.0
knockback_power = 75.0
hitbox_owner = NodePath("..")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-1, 3)
shape = SubResource("CircleShape2D_lqhho")
disabled = true

[node name="hitbox_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="shock_timer" type="Timer" parent="."]
wait_time = 0.1

[node name="lightning" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.980392, 0.901961, 0.388235, 1)
position = Vector2(0, -15)
scale = Vector2(0.15, 0.15)
texture = ExtResource("5_ebw1k")
hframes = 3
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="lightning"]
libraries = {
"": SubResource("AnimationLibrary_02iuy")
}
speed_scale = 2.0

[node name="damage_label" type="Marker2D" parent="."]
visible = false
position = Vector2(-5, -17)

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="hitbox_timer" to="." method="_on_hitbox_timer_timeout"]
[connection signal="timeout" from="shock_timer" to="." method="_on_shock_timer_timeout"]
